final adjustment of text, add link to Microsoft report, fix heading font size and circle size on small viewport sizes on the collaborate and share section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,10 @@
     color: white;
 }
 
+.section-heading-chapters-contact-visit {
+    font-size: 30px;
+}
+
 .callout-heading {
     font-family: "Roboto Condensed", sans-serif; 
     font-size: 28px;
@@ -95,10 +99,6 @@ h1 {
 
 .welcome-heading {
     font-size: 40px;
-}
-
-.price-examles-heading {
-    font-size: 27px;
 }
 
 p {
@@ -145,10 +145,6 @@ body {
 
 .text-color-black {
     color: black;
-}
-
-.text-color-yellow {
-    color:#ffd757;
 }
 
 .icon-styling {
@@ -223,6 +219,7 @@ body {
 
 .hero-image {
     background: url("../images/kugghjul_mobil.jpg") no-repeat center center;  
+    background-color: #002A38;
     width: 100%;
     height: 100vh;
     position: relative;
@@ -275,6 +272,7 @@ body {
 
 .hero-image-elearning {
     background: url("../images/elearning_hero.jpg") no-repeat center center;  
+    background-color: #002A38;
     width: auto;
     height: 100vh;
     position: relative;
@@ -316,6 +314,7 @@ body {
 
 .video-hero-image {
     background: url("../images/video_hero_2.jpg") no-repeat center center;  
+    background-color: rgb(35, 22, 15);
     width: 100%;
     height: 100vh;
     position: relative;
@@ -329,6 +328,7 @@ body {
 
 .samarbeta-hero-image {
     background: url("../images/samarbeta_hero.jpg") no-repeat center center;  
+    background-color: #002A38;
     width: 100%;
     height: 100vh;
     position: relative;
@@ -340,8 +340,8 @@ body {
 
 .circle-container {
     background-color: #895536;
-    height: 300px;
-    width: 300px;
+    height: 230px;
+    width: 230px;
     border-radius: 50%;
 }
 
@@ -349,6 +349,7 @@ body {
 
 .onboarding-hero-image {
     background: url("../images/onboarding_hero_2.jpg") no-repeat center center;  
+    background-color: #002A38;
     width: 100%;
     height: 100vh;
     position: relative;
@@ -361,6 +362,7 @@ body {
 /*Company | landing*/
 .hero-company-image {
     background: url("../images/kugghjul_mobil.jpg") no-repeat center center;  
+    background-color: #002A38;
     width: 100%;
     height: 60vh;
     position: relative;
@@ -428,15 +430,7 @@ a:hover {
 
 /*Media queries*/
 
-@media only screen and (min-width:320px) {
-    .block-divider {
-        width: 230px;
-    }
 
-    h2 {
-        font-size: 18px;
-    }
-}
 
 @media only screen and (min-width:320px) {
     .block-divider {
@@ -446,6 +440,7 @@ a:hover {
     h2 {
         font-size: 18px;
     }
+
 }
 
 @media only screen and (min-width:375px) {
@@ -465,6 +460,11 @@ a:hover {
         width: 275px;
     }
 
+    .circle-container {
+        height: 300px;
+        width: 300px;
+    }
+
 }
 
 @media only screen and (min-width:768px) {
@@ -475,7 +475,7 @@ a:hover {
 
     .hero-company-image {
         background: url("../images/kugghjul_xl.jpg") no-repeat center center;  
-        height: 75vh;
+        height: 100vh;
     }
 
     .call-out-heading {
@@ -577,6 +577,10 @@ a:hover {
         font-size: 26px;  
     }
 
+    .call-out-heading-chapters {
+        font-size: 30px;  
+    }
+
     .callout-text {
         font-size: 16px;
     }
@@ -591,7 +595,11 @@ a:hover {
     }
 
     .section-heading {
-        font-size: 20px;
+        font-size: 21px;
+    }
+
+    h2 {
+        font-size: 19px;
     }
 
     h3 {
@@ -614,6 +622,18 @@ a:hover {
         font-size: 50px;
     }
 
+    .call-out-heading-chapters {
+        font-size: 40px;
+    }
+
+    .section-heading {
+        font-size: 24px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
     .hero-company-image {
         height: 100vh;
     }
@@ -621,11 +641,6 @@ a:hover {
     .hero-image-contact {
         height: 110vh;
     }
-
-    .call-out-heading-chapters {
-        font-size: 40px;
-    }
-
 
     .blue-background {
         background-color: #002A38;
@@ -711,6 +726,10 @@ a:hover {
 
     .call-out-heading {
         font-size: 50px;
+    }
+
+    .call-out-heading-chapters {
+        font-size: 40px;
     }
 
     .hero-company-image {
@@ -845,7 +864,11 @@ a:hover {
 
     .call-out-heading {
         font-size: 40px;  
-        }
+    }
+
+    .call-out-heading-chapters {
+        font-size: 35px;  
+    }
 
    
     .block-divider {
@@ -890,6 +913,14 @@ a:hover {
     and (device-height: 823px) {
         .block-divider {
             width: 300px;
+        }
+
+        .call-out-heading {
+            font-size: 40px;  
+        }
+
+        .call-out-heading-chapters {
+            font-size: 40px;  
         }
 
     }
